# Drug_Interaction_Prediction_NLP

./: README.md
capstone-website/: README.md  atom.json  home.py  omeprazole_model1.json  omeprazole_model2.json  pharmacy.json  requirements.txt  sthetoscope.json  streamlit.css
data/: interaction_information_api.csv
mlapi/: Dockerfile  example_inference_scores.json  pyproject.toml
mlapi/morgan-embed-bio-clinical-bert-ddi/: basis_300centroids_fingerprints.pkl  config.json
mlapi/src/: data_ddi.py  main.py  model.py
mlapi/tests/: test_mlapi.py
notebooks/: API_scraping.ipynb  Bio-ClinicalBERT_Dual_Smiles_target.ipynb  Bio-ClinicalBERT_Morgan300_DoubleSMILES_Unfreeze.ipynb  Bio-ClinicalBERT_Morgan300_Pathway.ipynb  Bio-ClinicalBERT_Morgan300_Pathway_top20.ipynb  Bio-ClinicalBERT_Morgan768_DoubleSMILES.ipynb  Bio-ClinicalBERT_Morgan_768Clusters.ipynb  Bio-ClinicalBERT_Morgan_Combine.ipynb  Bio-ClinicalBERT_Morgan_DoubleSMILES.ipynb  Bio-ClinicalBERT_RDKit_Combine.ipynb  Bio-ClinicalBERT_Trainer.ipynb  Bio-GPT Models.ipynb  Bio_BERT_Models.ipynb  Bio_ClinicalBERT_Models.ipynb  Bio_ClinicalBERT_Models_Unfreeze.ipynb  EDA.pbix  ETL_data_processing.ipynb  ETL_data_processing_20classes.ipynb  ETL_data_processing_binary.ipynb  ETL_data_processing_pathway_binary.ipynb  ETL_original_data.ipynb  Morgan Neural_Net_Binary.ipynb  PubMed_BERT_Models.ipynb  SMILES_embedding.ipynb  Web_scraping.ipynb  XGBoost_LogReg_Binary.ipynb  models_logistic_regression.ipynb  smiles_embedding.py  web_scraping.py
trainer/: auto_class_register.py  train_biobert.py
(+8 files in other folders)
